--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^2.2.0",
     "colors": "^1.4.0",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.21.2",
@@ -22,6 +23,7 @@
     "helmet": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.7",
+    "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.5",
     "razorpay": "^2.9.6",
