--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,7 @@
 MONGO_URI=your_mongodb_connection_string_here
 JWT_SECRET=your_jwt_secret_here
-PORT=5000
+
+FRONTEND_URL=your_vercel_frontend_url_here
 
 EMAIL_USER=your_email_here
 EMAIL_PASS=your_email_password_here
